@@ -1,3 +1,14 @@
+2012-03-09  Thouraya ANDOLSI  <thouraya.andolsi@st.com>
+
+        Reviewed by Zoltan Herczeg.
+
+        [Qt] Fix the SH4 build after r109834
+        https://bugs.webkit.org/show_bug.cgi?id=80492
+
+        * assembler/MacroAssemblerSH4.h:
+        (JSC::MacroAssemblerSH4::branchAdd32):
+        (JSC::MacroAssemblerSH4::branchSub32):
+
 2012-03-09  Andy Wingo  <wingo@igalia.com>
 
         Refactor code feature analysis in the parser
